# open-source-news-analysis

./: .pre-commit-config.yaml  README.md  findings.ipynb  pyproject.toml  quotes.md
analysis/input/: abcnews.json  accurat.json  ajam.json  ajinteractive.json  aljazeeraplus.json  animalpolitico.json  apmg.json  arizonadailystar.json  associatedpress.json  axioscode.json  bangordailynews.json  baycitizen.json  bbc-data-unit.json  biglocalnews.json  bloomberg.json  bloomberggraphics.json  bostonglobe.json  buzzfeed-openlab.json  buzzfeed.json  buzzfeednews.json  calmatters.json  cbcrc.json  cbs-news-data.json  censusreporter.json  chalkbeat.json  cirlabs.json  city-bureau.json  civica-digital.json  civio.json  condenast.json  coralproject.json  correctiv.json  courierjournal.json  cunyjschool.json  dailybeast.json  dallasmorningnews.json  data-liberation-project.json  datadesk.json  datahub.json  datamade.json  (+161 more)
data/extracted/: orgs.csv
data/extracted/org-repos/: abcnews.json  abcotvdata.json  accurat.json  ajam.json  alephdata.json  aljazeeraplus.json  ancir.json  animalpolitico.json  apmg.json  arizona-republic-data.json  arizonadailystar.json  associatedpress.json  axioscode.json  azpm.json  badideafactory.json  baycitizen.json  (+214 more)
data/transformed/: goodnews-org-repos-by-year.csv  org-activity.csv  org-repos-by-year.csv  org-repos.csv  orgs.csv  repos-by-year.csv  selected-org-repos-by-year.csv
pipeline/: __main__.py  cli.py  utils.py
pipeline/download/: cli.py  org_commits.py  org_members.py  org_repo_contributors.py  org_repos.py  orgs.py  user_repos.py
